Harden VCF QC and restart missing-data analyses